# aperag/schema/view_models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.merged.yaml
-#   timestamp: 2025-06-24T06:45:59+00:00
+#   timestamp: 2025-06-24T07:36:45+00:00
 
 from __future__ import annotations
 
@@ -598,12 +598,6 @@ class DocumentCreate(BaseModel):
     description: Optional[str] = None
     source: Optional[str] = None
     collection_id: Optional[str] = None
-
-
-class DocumentUpdate(BaseModel):
-    title: Optional[str] = None
-    description: Optional[str] = None
-    source: Optional[str] = None
 
 
 class RebuildIndexesRequest(BaseModel):
